[project]
name = "ocr-lista-escolar"
version = "0.2.0"
description = "Projeto de OCR usando AWS Textract para extrair texto de imagens."
readme = "README.md"
requires-python = ">=3.9"

[project.dependencies]
boto3 = ">=1.35.63"
boto3-stubs[textract] = ">=1.35.63"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
